@@ -41,7 +41,8 @@ IMGUI_IMPL_API void     ImGui_ImplDX10_UpdateTexture(ImTextureData* tex);
 struct ImGui_ImplDX10_RenderState
 {
     ID3D10Device*           Device;
-    ID3D10SamplerState*     SamplerDefault;
+    ID3D10SamplerState*     SamplerLinear;
+    ID3D10SamplerState*     SamplerNearest;
     ID3D10Buffer*           VertexConstantBuffer;
 };
 
