@@ -190,6 +190,10 @@ Other Changes:
     non-ASCII values to io.AddInputCharacter(). (#9099)
   - Debug Log: can output to debugger on Windows. (#5855)
 - Backends:
+  - DirectX10: added 'SamplerNearest' in ImGui_ImplDX10_RenderState.
+    (+renamed 'SamplerDefault' to 'SamplerLinear', which was tagged as beta API)
+  - DirectX11: added 'SamplerNearest' in ImGui_ImplDX11_RenderState.
+    (+renamed 'SamplerDefault' to 'SamplerLinear', which was tagged as beta API)
   - GLFW: Avoid repeated glfwSetCursor()/glfwSetInputMode() calls when unnecessary.
     Lowers overhead for very high framerates (e.g. 10k+ FPS). [@maxliani]
   - GLFW: Added IMGUI_IMPL_GLFW_DISABLE_X11 / IMGUI_IMPL_GLFW_DISABLE_WAYLAND to
@@ -198,6 +202,7 @@ Other Changes:
     platforms. (#8792, #9112)
   - SDL2, SDL3: changed GetClipboardText() handler to return NULL on error aka
     clipboard contents is not text. Consistent with other backends. (#9168)
+  - SDL_GPU3: added 'TexSamplerNearest' in ImGui_ImplSDLGPU3_RenderState.
   - SDL_GPU3: macOS version can use MSL shaders in order to support macOS 10.14+
     (vs Metallib shaders requiring macOS 14+). Requires application calling
     SDL_CreateGPUDevice() with SDL_GPU_SHADERFORMAT_MSL. (#9076) [@Niminem]
